Imported classpath-generics 0.92
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/classpath-generics@116055 138bc75d-0d04-0410-961f-82ee72b054a4